PullRequest: 781 fix: 补充数字与文本之前gap
Merge branch 'fix/console-hint of git@code.alipay.com:oceanbase/oceanbase-developer-center.git into dev-4.3.4

https://code.alipay.com/oceanbase/oceanbase-developer-center/pull_requests/781




* fix: 补充数字与文本之前gap

--- a/src/page/Console/components/ScheduleItem/index.less
+++ b/src/page/Console/components/ScheduleItem/index.less
@@ -28,6 +28,8 @@
         color: var(--text-color-link);
         line-height: 20px;
         font-weight: 500;
+        margin-left: 4px;
+        margin-right: 4px;
       }
     }
     .ringChart {
